# mlib

./: .gitignore  README.md  check.sh  pyproject.toml  run_examples.sh
examples/: basic_cross_entropy.py  basic_mse.py
mlib/: nn.py
tests/: test_nn.py
