[tool.poetry]
name = "mlib"
version = "0.1.0"
description = "A new ML Library"
authors = ["YKoustubhRao <ykoustubhrao99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
numpy = ">=1.24,<2.3"
numba = "^0.61.2"
ruff = "^0.12.7"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
